--- a/404.html
+++ b/404.html
@@ -74,6 +74,9 @@
                                 <i class="fa fa-search"></i> Search
                             </a>
                         </li>
+                            <li>
+                                <a href="https://github.com/example/repository/"><i class="fa fa-github"></i> GitHub</a>
+                            </li>
                     </ul>
                 </div>
             </div>
@@ -97,7 +100,7 @@
         </footer>
         <script>
             var base_url = "/",
-                shortcuts = {"search": 83, "next": 78, "help": 191, "previous": 80};
+                shortcuts = {"next": 78};
         </script>
         <script src="/js/base.js" defer></script>
         <script src="/search/main.js" defer></script>
